<resources>
    <string name="app_name">Dolna-Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_credit">Credit</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_livebids">Running Trips</string>
    <string name="menu_bidresults">Auction Bid Result</string>
    <string name="menu_bidhistory">History</string>
    <string name="menu_currentTrips">Your Current Trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>