<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/grp_1" >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_dashbaord"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_livebids"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_livebids" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_leaderboard" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/grp_2">
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_driver" />
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_credit" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_offer" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/grp_3">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/grp_4">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_logout" />

    </group>
</menu>